src/test/deca/context/valid/test_pass_3_main_empty.deca
// Description:
//    Program testing a main empty  
//
// Results:
//    ok
//
// History:
//    Created on 9/01/2025


{
}
